[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Main.gd" type="Script" id=1]
[ext_resource path="res://src/FullSizeImage.gd" type="Script" id=2]
[ext_resource path="res://src/ImageTextureRect.gd" type="Script" id=3]
[ext_resource path="res://src/GridEditView.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/DisplayImgView.gd" type="Script" id=5]
[ext_resource path="res://src/ExportDialog.tscn" type="PackedScene" id=6]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("VBoxContainer/DisplayImgView/ScrollContainer/ViewportContainer/MainViewport")

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.494118, 0.482353, 0.568627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 112.0
margin_top = 87.0
margin_right = 915.0
margin_bottom = 569.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.png; PNG Images", "*.bmp; BMP Images", "*.jpeg; JPEG Images", "*.gif ; GIF Image", "*.jpg ; JPG Image" )
current_dir = "/Users/tuan/Desktop/GridImage/project"
current_file = "icon.png"
current_path = "/Users/tuan/Desktop/GridImage/project/icon.png"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridEditView" parent="." instance=ExtResource( 4 )]
margin_left = 131.073
margin_top = 70.5778
margin_right = 378.073
margin_bottom = 265.578
window_title = "grid edit"

[node name="ExportDialog" parent="." instance=ExtResource( 6 )]
margin_left = 33.3564
margin_top = 69.9042
margin_right = 491.356
margin_bottom = 168.904

[node name="PathDialog" type="FileDialog" parent="."]
margin_left = 210.844
margin_top = 204.246
margin_right = 786.844
margin_bottom = 521.245
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
current_dir = "/Users/tuan/Desktop/GridImage/project"
current_path = "/Users/tuan/Desktop/GridImage/project/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSelect" type="Button" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 22.0
text = "File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExport" type="Button" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 91.0
margin_bottom = 22.0
text = "Export"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLineEdit" type="Button" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 95.0
margin_right = 131.0
margin_bottom = 22.0
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPreview" type="Button" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 135.0
margin_right = 197.0
margin_bottom = 22.0
toggle_mode = true
text = "Preview"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonShowGrid" type="Button" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 201.0
margin_right = 277.0
margin_bottom = 22.0
toggle_mode = true
pressed = true
text = "Show Grid"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AppVersionLabel" type="Label" parent="VBoxContainer/Panel/MarginContainer"]
margin_left = 993.0
margin_top = 8.0
margin_right = 1020.0
margin_bottom = 22.0
size_flags_horizontal = 8
text = "v.01"

[node name="DisplayImgView" type="Control" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/DisplayImgView"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/DisplayImgView/ScrollContainer"]
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainViewport" type="Viewport" parent="VBoxContainer/DisplayImgView/ScrollContainer/ViewportContainer"]
handle_input_locally = false
render_target_update_mode = 3

[node name="ImageTextureRect" type="TextureRect" parent="VBoxContainer/DisplayImgView/ScrollContainer/ViewportContainer/MainViewport"]
margin_right = 1024.0
margin_bottom = 550.0
rect_min_size = Vector2( 200, 200 )
rect_clip_content = true
mouse_filter = 2
expand = true
stretch_mode = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/DisplayImgView"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="VBoxContainer/DisplayImgView/ViewportContainer"]
size = Vector2( 1024, 571 )
handle_input_locally = false
render_target_update_mode = 0

[node name="PreviewImageView" type="TextureRect" parent="VBoxContainer/DisplayImgView/ViewportContainer/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -36.0
margin_bottom = -83.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
texture = SubResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
